2000-08-29  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/GB18030: Add entries from GBK not present here.

	* SUPPORTED: Add zh_TW.EUC-JP and zh_CN.GB18030.

	* locales/iso14651_t1: Use hexadecimal ellipsis in <HAN> script.

2000-08-29  Akira Higuchi  <a@kondara.org>

	* charmaps/GB2312: Fix ".." -> "..." in width definitions.
	* charmaps/GBK: Likewise.

	* SUPPORTED: Add zh_CN.GB2312 and zh_TW.BIG5.

2000-08-27  Ulrich Drepper  <drepper@redhat.com>

	* locales/sv_SE: Remove old LC_COLLATE definition.  Use iso14651_t1
	and customize with several reorder-after statements.
	Reported by menthos@menthos.com.

2000-08-25  Ulrich Drepper  <drepper@redhat.com>

	* locales/ja_JP: Add new categories with generic information.

	* locales/i18n (default_missing): Change back to only U003F.

2000-08-24  Andreas Jaeger  <aj@suse.de>

	* Makefile (generated): Add some .out files.

2000-08-23  Ulrich Drepper  <drepper@redhat.com>

	* locales/i18n: Add transliteration information.

2000-08-22  Ulrich Drepper  <drepper@redhat.com>

	* locales/ca_ES@euro: Country is Spain.
	* locales/ca_ES: Likewise.

	* locales/es_MX: Correct int_curr_symbol.
	* locales/es_PE: Likewise.

	* SUPPORTED: Add missing supported locales.

	* locales/fa_IR: Correct a few of the contained bugs.

	* locales/zh_HK: New file.

	* charmaps/BIG5HKSCS: New file.

	* locales/en_CA,2.5: Removed.
	* locales/fr_CA,2.13: Removed.
	* locales/in_ID: Removed.

	* locales/sq_AL: New file.
	* SUPPORTED: Add sq_AL.ISO-8859-1.

	* locales/vi_VN: New file.
	* SUPPORTED: Add vi_VN.UTF-8.

	* locales/ko_KR: Correct currency_symbol entry.

	* locales/hi_IN: New file.
	* SUPPORTED: Add hi_IN.UTF-8.

	* Makefile (test-input): Add da_DK and hr_HR sorting tests.

	* sort-test.sh: Improve error handling by printing more information.

	* locales/ar_AE: New file.
	* locales/ar_BH: New file.
	* locales/ar_DZ: New file.
	* locales/ar_EG: New file.
	* locales/ar_IQ: New file.
	* locales/ar_JO: New file.
	* locales/ar_KW: New file.