@@ -18502,6 +18502,8 @@ END LC_COLLATE
 LC_MESSAGES
 yesexpr	"<U005E><U005B><U0079><U0059><UFF59><UFF39><U005D>"
 noexpr	"<U005E><U005B><U006E><U004E><UFF4E><UFF2E><U005D>"
+yesstr  "<U306F><U3044>"
+nostr   "<U3044><U3044><U3048>"
 END LC_MESSAGES
 
 
